--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body>
-    
+    <!-- ____searchField section_____ -->
+     <section class="w-50 mx-auto mt-5">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" id="input-field" placeholder="Search by book name " aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <button onclick="loadBook()" class="input-group-text" id="search-button">Search</button>
+          </div>
+     </section>   
+
+     <div id="resultSHow-div"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
